--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,10 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio cache/options directory
+build/vs2019/.vs/**
+build/vs2019/Debug/**
+build/vs2019/Release/**
+build/vs2019/computer-science/Debug/**
+build/vs2019/computer-science/Release/**
