unit_tests.yml: fix missing -C (configuration) option for CTest

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -57,5 +57,5 @@ jobs:
 
       - name: Run Unit Tests
         run: |
-          ctest --output-on-failure
+          ctest -C Debug --output-on-failure
         working-directory: ${{ github.workspace }}/build/CMake/win
