add .vscode files to build and debug; add Development.md file describing VS Code setting up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,6 @@
         "variant": "cpp",
         "xstring": "cpp",
         "xlocale": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "D:/DVSAV/Projects/CPP/computer-science/build/CMake"
 }
